@@ -1,3 +1,7 @@
+2019-02-10  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* gridlayoutmanager_impl.C: Fix replace_cell() bug.
+
 0.17
 
 2019-01-29  Sam Varshavchik  <mrsam@courier-mta.com>
